--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: 100vw;
+  /* margin: 0 auto; */
   padding: 2rem;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .logo {
@@ -40,3 +41,35 @@
 .read-the-docs {
   color: #888;
 }
+
+#mainContainer{
+width: 100%;
+}
+
+
+
+.container2{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  
+}
+
+.container1{
+  display: flex;
+  gap:15px;
+}
+
+
+.contentContainer{
+  margin-top: 2rem;;
+  display: flex;
+}
+
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
