--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ button {
   width: fit-content;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #000;
 }
 button:focus,
 button:focus-visible {
@@ -68,6 +68,6 @@ input[type='checkbox']{
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #f5f5f5;
   }
 }
