--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,22 @@
   /* text-align: center; */
 }
 
+.loader-container{
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+background: rgba(255, 255, 255, 0.01);
+backdrop-filter: blur(2px);
+transform: translate(-50%, -50%);
+z-index: 9999;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -29,8 +45,8 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .logo {
+    animation: logo-spin infinite 10s linear;
   }
 }
 
