--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,6 @@ input[type='checkbox']{
     color: #747bff;
   }
   button {
-    background-color: #f5f5f5;
+    background-color: #eeeeee;
   }
 }
